--- a/2-express/3-fs-recipe/client/package.json
+++ b/2-express/3-fs-recipe/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.16",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
