--- a/3-mongodb/2-api/package.json
+++ b/3-mongodb/2-api/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.4",
     "nodemon": "^3.1.11",
-    "qs": "^6.14.1"
+    "qs": "^6.14.1",
+    "validator": "^13.15.26"
   }
 }
