--- a/3-mongodb/2-api/package.json
+++ b/3-mongodb/2-api/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "mailtrap": "^4.4.0",
     "mongoose": "^9.1.4",
+    "nodemailer": "^8.0.1",
     "nodemon": "^3.1.11",
     "qs": "^6.14.1",
     "validator": "^13.15.26"
