--- a/3-mongodb/2-tour-api-v2/package.json
+++ b/3-mongodb/2-tour-api-v2/package.json
@@ -23,9 +23,11 @@
     "jsonwebtoken": "^9.0.3",
     "mailtrap": "^4.4.0",
     "mongoose": "^9.1.4",
+    "multer": "^2.1.0",
     "nodemailer": "^8.0.1",
     "nodemon": "^3.1.11",
     "qs": "^6.14.1",
+    "sharp": "^0.34.5",
     "validator": "^13.15.26"
   }
 }
